    (LP: #494997).
  * Make ubiquity.parted_server's logging to /var/log/partman more
    distinctive.
  * Set sensible permissions on /var/log/installer/debug, not os.open's
    default of 0755.
  * Gather basic information from parted_server using the PARTITIONS command
    (all partitions on a disk at once), which is slightly faster than
    PARTITION_INFO (one partition at a time).

 -- Mario Limonciello <superm1@ubuntu.com>  Thu, 10 Dec 2009 03:01:46 -0600

ubiquity (2.1.4) lucid; urgency=low

  [ Mario Limonciello ]
  * Correct a variable that didn't get changed from pychecker
    cleanup in the intro plugin (LP: #492873).

  [ Martin Pitt ]
  * scripts/ubi-restart-hal:
    - Restart hal the upstart way.
    - Do not fail if hal does not exist, and drop hal dependency. 
      (LP: #493139)
    - Also trigger an udev change event for key devices, so that the changed
      keyboard settings also apply to an udevified X.org server.
  * scripts/ubi-restart-hal: Rename to scripts/ubi-reload-keyboard to state
    the intent, not the means (since it now primarily applies to udev).
    Adjust debian/oem-config.install accordingly.

  [ Colin Watson ]
  * Automatic update of included source packages: base-installer
    1.103ubuntu2, preseed 1.43.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 08 Dec 2009 11:58:27 +0000

ubiquity (2.1.3) lucid; urgency=low

  [ Evan Dandrea ]
  * Additional code cleanup from pycheck findings.

  [ Mario Limonciello ]
  * Don't run run_target_config_hooks for OEM config mode.  It's
    already run during actual installation and can cause problems
    during the OEM config run. (LP: #473241)
  * Mythbuntu frontend: don't default to UseEvents for NVIDIA anymore.

  [ Colin Watson ]
  * Pass DATA command through debconffilter rather than swallowing it,
    restoring useful progress information (LP: #445385).
  * Fix KDE frontend translation issues (LP: #478006):
    - Retranslate install_process_label when the language changes.